alignment fix of near by places

--- a/src/app/views/landing/ListingDetailOne/ListingDetailOne.component.scss
+++ b/src/app/views/landing/ListingDetailOne/ListingDetailOne.component.scss
@@ -3916,6 +3916,17 @@ border-radius: 10px;
   margin-top: 10px;
   font-size: 14px;
 }
+.item-background {
+  background-color: #D9D9D92E; /* Customize background color */
+  padding: 15px;
+
+  border-radius: 10px; /* Optional: Adds rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow for better separation */
+}
+
+
+
+
 
 
 
